# wizards-lizards-sdl

./: .gitmodules  CMakeLists.txt
assets/: shell.html
libs/: CMakeLists.txt
src/: CMakeLists.txt  ecs.h  main.cpp  main.h
src/components/: aicontroller.h  collision.h  debugrigidbody2d.cpp  debugrigidbody2d.h  deletebulletsonhit.h  health.h  playerclass.cpp  playerclass.h  playerinput.h  render2d.cpp  render2d.h  renderframe.h  rigidbody2d.h  sprite.h
src/entities/: fireball.cpp  gate.cpp  gate.h  lizard.cpp  physicsobject.h  player.cpp  player.h  roomsensor.cpp  roomsensor.h  spawner.h
src/entities/classes/: baseclass.h  wizard.cpp  wizard.h
src/map/: dungeon.h  levelmanager.cpp  levelmanager.h  newdungeon.cpp  newdungeon.h  room.h  tile.h
src/states/game/: game.cpp  game.h
src/states/intro/: intro.cpp  intro.h
src/states/menu/: menu.cpp  menu.h  menustructure.h
src/states/test/: box2dobjects.cpp  box2dobjects.h  olcUTIL_Geometry2D.h  test.cpp  test.h
src/ui/: ui.cpp  ui.h
src/world/: world.cpp  world.h
